--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,16 @@ spring:
     cache: false
     servlet:
       content-type: text/html
+  datasource:
+    url: jdbc:mysql://localhost:3306/coin?serverTimezone=CTT&characterEncoding=UTF-8&useSSL=true
+    username: root
+    password: root
+    driver-class-name: com.mysql.jdbc.Driver
+    max-active: 200
+    max-idle: 20
+    min-idle: 10
+mybatis:
+  mapper-locations: classpath:dataImpl/*Mapper.xml
 server:
   port: 80
   session-timeout: 30
