feat: 知识图谱呈现

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   thymeleaf:
-    prefix: classpath:/web/
+    prefix: classpath:/static/html/
     suffix: .html
     mode: HTML5
     encoding: UTF-8
