--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     servlet:
       content-type: text/html
   datasource:
-    url: jdbc:mysql://localhost:3306/coin?serverTimezone=GMT+8&characterEncoding=UTF-8&useSSL=true
+    url: jdbc:mysql://localhost:3306/coin?serverTimezone=CTT&characterEncoding=UTF-8&useSSL=true
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
