--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     url: jdbc:mysql://localhost:3306/coin?serverTimezone=CTT&characterEncoding=UTF-8&useSSL=true
     username: root
     password: root
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     max-active: 200
     max-idle: 20
     min-idle: 10
