--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
 			<version>2.23.4</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
