--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,8 @@
 spring:
+  profiles:
+    active: dev
   thymeleaf:
-    prefix: classpath:/static/html/
-    suffix: .html
-    mode: HTML5
-    encoding: UTF-8
     cache: false
-    servlet:
-      content-type: text/html
   datasource:
     url: jdbc:mysql://localhost:3306/coin?serverTimezone=CTT&characterEncoding=UTF-8&useSSL=true
     username: root
