--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,11 @@ server:
   session-timeout: 30
   tomcat.max-threads: 1
   tomcat.uri-encoding: UTF-8
+
+aliyun:
+  oss:
+    file:
+      endpoint: oss-cn-hangzhou.aliyuncs.com
+      keyid: LTAI4G8aY3VqV55xwwtvfNyi
+      keysecret: NoITeRzQHAoFSm9OTx70Oj1TeK1P0G
+      bucketname: software-engineering-iii
