--- a/pom.xml
+++ b/pom.xml
@@ -115,70 +115,156 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M4</version>
                 <configuration>
                     <argLine>
                         -Xmx1024m -XX:MaxPermSize=256m
                     </argLine>
-                    <skip>false</skip>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <includes>
+                        <include>**/service/**</include>
+                        <include>**/controller/**</include>
+                    </includes>
                 </configuration>
-                <version>2.18</version>
             </plugin>
-
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.6.5.201403032054</version>
+                <configuration>
+                    <includes>
+                        <include>**/service/**</include>
+                        <include>**/controller/**</include>
+                    </includes>
+                </configuration>
                 <executions>
                     <execution>
+                        <id>default-prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
                     <execution>
-                        <id>report</id>
-                        <phase>prepare-package</phase>
+                        <id>default-report</id>
+                        <phase>test</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
                     </execution>
+                    <execution>
+                        <id>default-check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>BUNDLE</element>
+                                    <limits>
+                                        <!--复杂度覆盖率-->
+                                        <!-- <limit>
+                                            <counter>COMPLEXITY</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.60</minimum>
+                                        </limit>
+                                        方法覆盖率
+                                        <limit>
+                                            <counter>METHOD</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.40</minimum>
+                                        </limit>
+                                        指令覆盖率
+                                        <limit>
+                                            <counter>INSTRUCTION</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.50</minimum>
+                                        </limit>
+                                        行覆盖率
+                                        <limit>
+                                            <counter>LINE</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.50</minimum>
+                                        </limit>
+                                        类盖率
+                                        <limit>
+                                            <counter>LINE</counter>
+                                            <value>CLASS</value>
+                                            <minimum>0.50</minimum>
+                                        </limit> -->
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
+            <!--            <plugin>-->
+            <!--                <groupId>org.apache.maven.plugins</groupId>-->
+            <!--                <artifactId>maven-surefire-plugin</artifactId>-->
+            <!--                <configuration>-->
+            <!--                    <argLine>-->
+            <!--                        -Xmx1024m -XX:MaxPermSize=256m-->
+            <!--                    </argLine>-->
+            <!--                    <skip>false</skip>-->
+            <!--                </configuration>-->
+            <!--                <version>2.18</version>-->
+            <!--            </plugin>-->
+
+            <!--            <plugin>-->
+            <!--                <groupId>org.jacoco</groupId>-->
+            <!--                <artifactId>jacoco-maven-plugin</artifactId>-->
+            <!--                <version>0.6.5.201403032054</version>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <goals>-->
+            <!--                            <goal>prepare-agent</goal>-->
+            <!--                        </goals>-->
+            <!--                    </execution>-->
+            <!--                    <execution>-->
+            <!--                        <id>report</id>-->
+            <!--                        <phase>prepare-package</phase>-->
+            <!--                        <goals>-->
+            <!--                            <goal>report</goal>-->
+            <!--                        </goals>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
         </plugins>
-        <pluginManagement>
-            <plugins>
-                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-                <plugin>
-                    <groupId>org.eclipse.m2e</groupId>
-                    <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
-                    <configuration>
-                        <lifecycleMappingMetadata>
-                            <pluginExecutions>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>org.jacoco</groupId>
-                                        <artifactId>
-                                            jacoco-maven-plugin
-                                        </artifactId>
-                                        <versionRange>
-                                            [0.6.5.201403032054,)
-                                        </versionRange>
-                                        <goals>
-                                            <goal>prepare-agent</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore/>
-                                    </action>
-                                </pluginExecution>
-                            </pluginExecutions>
-                        </lifecycleMappingMetadata>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
+        <!--        <pluginManagement>-->
+        <!--            <plugins>-->
+        <!--                &lt;!&ndash;This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.&ndash;&gt;-->
+        <!--                <plugin>-->
+        <!--                    <groupId>org.eclipse.m2e</groupId>-->
+        <!--                    <artifactId>lifecycle-mapping</artifactId>-->
+        <!--                    <version>1.0.0</version>-->
+        <!--                    <configuration>-->
+        <!--                        <lifecycleMappingMetadata>-->
+        <!--                            <pluginExecutions>-->
+        <!--                                <pluginExecution>-->
+        <!--                                    <pluginExecutionFilter>-->
+        <!--                                        <groupId>org.jacoco</groupId>-->
+        <!--                                        <artifactId>-->
+        <!--                                            jacoco-maven-plugin-->
+        <!--                                        </artifactId>-->
+        <!--                                        <versionRange>-->
+        <!--                                            [0.6.5.201403032054,)-->
+        <!--                                        </versionRange>-->
+        <!--                                        <goals>-->
+        <!--                                            <goal>prepare-agent</goal>-->
+        <!--                                        </goals>-->
+        <!--                                    </pluginExecutionFilter>-->
+        <!--                                    <action>-->
+        <!--                                        <ignore/>-->
+        <!--                                    </action>-->
+        <!--                                </pluginExecution>-->
+        <!--                            </pluginExecutions>-->
+        <!--                        </lifecycleMappingMetadata>-->
+        <!--                    </configuration>-->
+        <!--                </plugin>-->
+        <!--            </plugins>-->
+        <!--        </pluginManagement>-->
     </build>
 
 
